# adapter

./: .env.example  .gitignore  README.md  adapter.db  pyproject.toml
src/adapter/: config.py  db.py  deps.py  logger.py  main.py  models.py  scheduler.py
src/adapter/api/: routes_admin.py  routes_event.py  routes_evidence.py  routes_sso.py  routes_sync.py
src/adapter/clients/: deepsoc.py  deepsoc_auth.py  flowshadow.py
src/adapter/services/: dedup.py  mapping.py  pipeline.py  sync.py
src/ly_deepsoc_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
