[project]
name = "ly-deepsoc-adapter"
version = "0.1.0"
description = "Adapter to integrate FlowShadow (ly_*) with DeepSOC: event sync + evidence query APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "SQLAlchemy>=2.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "APScheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
